[package]
name = "glsl-to-cxx"
version = "0.1.0"
authors = ["Jeff Muizelaar <jrmuizel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glsl = { git = "https://github.com/jrmuizel/glsl", branch = "fix/op-left-assoc" }
